2003-11-18  Todd Berman  <tberman@gentoo.org>

	* ParameterCollection.cs: Implemented
	* Parameter.cs: Added _owner, SetOwnerCollection and proper handling.
	ToString () now matches asp.net

2003-11-17 Ben Maurer  <bmaurer@users.sourceforge.net>

	* ControlParameter.cs:
	* CookieParameter.cs:
	* FormParameter.cs:
	* Parameter.cs:
	* QueryStringParameter.cs: New v2 files. Mostly
	implemented, still need a few methods.

2003-11-16  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ListItem.cs: prevent nullrefs ni Get/SetAttribute. Thanks to Alon
	Gazit <along@mainsoft.com>.

2003-11-13  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* RadioButton.cs: fixed RenderInputTag for negative TabIndex values.
	Patch by Alon Gazit <along@mainsoft.com>.

2003-11-09 Ben Maurer  <bmaurer@users.sourceforge.net>

	* DataBoundControl.cs: Implement 
	* ListControl.cs: inherit from the above.
	* Repeater.cs, BaseDataList.cs: should reset whenever we databind.

2003-11-09 Ben Maurer  <bmaurer@users.sourceforge.net>

	* BaseDataList.cs:
	* DataGrid.cs:
	* DataList.cs:
	* Repeater.cs: add v2 databinding stuff
	* XmlDataSource.cs: make it load the xml.

2003-11-09 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XmlDataSource.cs:
	* XmlDataSourceView.cs:
	* XmlHierarchicalDataSourceView.cs:
	* XmlHierarchicalEnumerable.cs:
	* XmlHierarchyData.cs: Implement

2003-11-08 Ben Maurer  <bmaurer@users.sourceforge.net>

	* SiteMapDataSourceView.cs: Implement.

2003-11-07 Jackson Harper <jackson@ximian.com>

	* ImageButton.cs: This is a workaround for bug #49819. It appears
	that the .x and .y values are not being posted, and only the x
	value is being posted with the ctrl's id as the key.
	
2003-11-07 Jackson Harper <jackson@ximian.com>

	* DataGrid.cs (CreateControlHierarchy): Current page index is
	alolowed to equal page count. This prevents an exception being
	thrown when both are zero.
	
2003-11-06 Jackson Harper <jackson@ximian.com>
